infrastructure/network/ingress-controller/pomerium/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verify
  namespace: teste
  labels:
    app: verify
    service: verify
spec:
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: pomerium-verify
