infrastructure/network/ingress-controller/pomerium/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verify
  namespace: teste
  annotations:
    ingress.pomerium.io/allowed_domains: |
      - example.com
    ingress.pomerium.io/pass_identity_headers: 'true'
spec:
  ingressClassName: pomerium
  # tls:
  # - hosts:
  #     - "*.localhost.pomerium.io"
  #   secretName: pomerium-wildcard-tls
  rules:
    - host: 'verify.localhost.pomerium.io'
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: verify
                port:
                  number: 8000
